// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateEdit Component should match create new snapshot 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
      style={
        Object {
          "lineHeight": "30px",
        }
      }
    >
      <li
        className="breadcrumb-item"
      >
        <a
          href="/states"
        >
          State Scores
        </a>
      </li>
      <li
        aria-current="page"
        className="breadcrumb-item active"
      >
        <select
          className="form-control form-control-sm"
          id="stateSelectDropdown"
          onChange={[Function]}
          value="SN"
        >
          <option
            value="SN"
          >
            State Name
          </option>
        </select>
      </li>
    </ol>
  </nav>
  <form>
    <div
      className="pb-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="state-name-1"
        >
          Name
        </label>
        <input
          className="form-control"
          defaultValue="State Name"
          id="state-name-1"
          name="name"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="state-abbrev-1"
        >
          Abbreviation
        </label>
        <input
          className="form-control"
          defaultValue="SN"
          id="state-abbrev-1"
          name="abbrev"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <h4>
        Score Card
      </h4>
      <div
        id="accordion"
      >
        <div
          className="card"
        >
          <div
            className="card-header"
            id="heading-0"
          >
            <h5
              className="mb-0 d-flex justify-content-between align-items-center"
            >
              <button
                aria-controls="collapse-0"
                aria-expanded="false"
                className="btn btn-link collapsed"
                data-target="#collapse-0"
                data-toggle="collapse"
                type="button"
              >
                Test Category Name
              </button>
              <div
                className="btn btn-warning"
              >
                C
              </div>
            </h5>
          </div>
          <div
            aria-labelledby="heading-0"
            className="collapse"
            data-parent="#accordion"
            id="collapse-0"
          >
            <div
              className="card-body"
            >
              <div
                id="accordion-1"
              >
                <div
                  className="card"
                >
                  <div
                    className="card-header"
                    id="heading-category-1-item-1"
                  >
                    <p
                      className="mb-0 d-flex justify-content-between align-items-center"
                    >
                      <button
                        aria-controls="collapse-category-1-item-1"
                        aria-expanded="false"
                        className="btn btn-sm btn-link collapsed"
                        data-target="#collapse-category-1-item-1"
                        data-toggle="collapse"
                        type="button"
                      >
                        Test Category Item Name
                      </button>
                    </p>
                  </div>
                  <div
                    aria-labelledby="heading-category-1-item-1"
                    className="collapse"
                    data-parent="#accordion-1"
                    id="collapse-category-1-item-1"
                  >
                    <div
                      className="card-body"
                    >
                      <div
                        className="form-check pb-4"
                      >
                        <input
                          className="form-check-input"
                          defaultChecked={true}
                          id="category-item-criteria-category-1-item-1"
                          name="meets_criteria"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          className="form-check-label"
                          htmlFor="category-item-criteria-category-1-item-1"
                        >
                          Meets Criteria
                        </label>
                      </div>
                      <div
                        className="form-group"
                      >
                        <label
                          htmlFor="category-item-link-category-1-item-1"
                        >
                          Link to State Code
                        </label>
                        <input
                          className="form-control"
                          defaultValue="https://google.com"
                          id="category-item-link-category-1-item-1"
                          name="link_to_code"
                          onKeyUp={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
  <hr
    className="pb-0"
  />
  <div
    className="d-flex align-items-center justify-content-between"
  >
    <h5>
      State Name
       Overall Score: 
      <div
        className="btn btn-warning"
      >
        C
      </div>
    </h5>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
    >
      Save
    </button>
  </div>
</div>
`;

exports[`StateEdit Component should match edit view snapshot 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
      style={
        Object {
          "lineHeight": "30px",
        }
      }
    >
      <li
        className="breadcrumb-item"
      >
        <a
          href="/states"
        >
          State Scores
        </a>
      </li>
      <li
        aria-current="page"
        className="breadcrumb-item active"
      >
        <select
          className="form-control form-control-sm"
          id="stateSelectDropdown"
          onChange={[Function]}
          value="SN"
        >
          <option
            value="SN"
          >
            State Name
          </option>
        </select>
      </li>
    </ol>
  </nav>
  <form>
    <div
      className="pb-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="state-name-undefined"
        >
          Name
        </label>
        <input
          className="form-control"
          id="state-name-undefined"
          name="name"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="state-abbrev-undefined"
        >
          Abbreviation
        </label>
        <input
          className="form-control"
          id="state-abbrev-undefined"
          name="abbrev"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <h4>
        Score Card
      </h4>
      <div
        id="accordion"
      >
        <div
          className="card"
        >
          <div
            className="card-header"
            id="heading-0"
          >
            <h5
              className="mb-0 d-flex justify-content-between align-items-center"
            >
              <button
                aria-controls="collapse-0"
                aria-expanded="false"
                className="btn btn-link collapsed"
                data-target="#collapse-0"
                data-toggle="collapse"
                type="button"
              >
                Test Category Name
              </button>
              <div
                className="btn btn-warning"
              >
                C
              </div>
            </h5>
          </div>
          <div
            aria-labelledby="heading-0"
            className="collapse"
            data-parent="#accordion"
            id="collapse-0"
          >
            <div
              className="card-body"
            >
              <div
                id="accordion-1"
              >
                <div
                  className="card"
                >
                  <div
                    className="card-header"
                    id="heading-category-1-item-1"
                  >
                    <p
                      className="mb-0 d-flex justify-content-between align-items-center"
                    >
                      <button
                        aria-controls="collapse-category-1-item-1"
                        aria-expanded="false"
                        className="btn btn-sm btn-link collapsed"
                        data-target="#collapse-category-1-item-1"
                        data-toggle="collapse"
                        type="button"
                      >
                        Test Category Item Name
                      </button>
                    </p>
                  </div>
                  <div
                    aria-labelledby="heading-category-1-item-1"
                    className="collapse"
                    data-parent="#accordion-1"
                    id="collapse-category-1-item-1"
                  >
                    <div
                      className="card-body"
                    >
                      <div
                        className="form-check pb-4"
                      >
                        <input
                          className="form-check-input"
                          defaultChecked={false}
                          id="category-item-criteria-category-1-item-1"
                          name="meets_criteria"
                          onClick={[Function]}
                          type="checkbox"
                        />
                        <label
                          className="form-check-label"
                          htmlFor="category-item-criteria-category-1-item-1"
                        >
                          Meets Criteria
                        </label>
                      </div>
                      <div
                        className="form-group"
                      >
                        <label
                          htmlFor="category-item-link-category-1-item-1"
                        >
                          Link to State Code
                        </label>
                        <input
                          className="form-control"
                          defaultValue={null}
                          id="category-item-link-category-1-item-1"
                          name="link_to_code"
                          onKeyUp={[Function]}
                          type="text"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
  <hr
    className="pb-0"
  />
  <div
    className="d-flex align-items-center justify-content-between"
  >
    <h5>
       Overall Score: 
      <div
        className="btn btn-warning"
      >
        C
      </div>
    </h5>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
    >
      Save
    </button>
  </div>
</div>
`;
